# krypton

./: .env  Cargo.toml
src/: address.rs  block.rs  blockchain.rs  errors.rs  lib.rs  main.rs  state.rs  txpool.rs
src/consensus/: config.rs  mod.rs  pow.rs
src/node/: config.rs  node.rs
src/transaction/: Transaction.rs  mod.rs  reward.rs  transaction.rs  user.rs
tests/: test.rs
