[package]
name = "krypton"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
hex = "0.4.3"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
blake3 = "1.8.2"
log = "0.4.29"
anyhow = "1.0.102"
base64 = "0.22.1"
pubnub = "0.7.0"
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
futures = "0.3.32"
dotenvy = "0.15.7"
serde_bytes="0.11"
